@@ -1,0 +1,5 @@
+3
+ Mini xyz
+A  0.000 0.000 0.000
+B  1.000 1.000 1.000
+C  2.000 2.000 2.000
